<resources>
    <string name="app_name">Sooheib\'s Portfolio</string>
    
    <string name="action_settings">Settings</string>

    <string name="app_buttons_title">My Nanodegree Apps!</string>

    <string name="btn_spotify_streamer">Spotify Streamer</string>
    <string name="btn_scores">Scores App</string>
    <string name="btn_library">Library App</string>
    <string name="btn_build_it_bigger">Build It Bigger</string>
    <string name="btn_xyz_reader">XYZ Reader</string>
    <string name="btn_capstone">Capstone: My own app</string>

    <string name="btn_click_toast">This button will launch my %1$s app!</string>

    <string name="btn_spotify_streamer_description">Media Streamer</string>
    <string name="btn_scores_description">Scores App</string>
    <string name="btn_library_description">Gradle Project</string>
    <string name="btn_build_it_bigger_description">Build It Bigger</string>
    <string name="btn_xyz_reader_description">XYZ Reader</string>
    <string name="btn_capstone_description">capstone</string>

</resources>
